<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.bookmark.BookmarkFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/left_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/chevron_left"
            android:tint="@color/gray_900"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/title_imageview"
        android:layout_width="328dp"
        android:layout_height="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="96dp"
        android:src="@drawable/signup_agree_title_image"
        android:scaleType="fitStart"/>
    
    <TextView
        android:id="@+id/subtitle_textview"
        android:layout_width="328dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_imageview"
        android:layout_marginTop="16dp"
        android:text="@string/signup_subtitle_text"
        android:fontFamily="@font/spoqa_han_sans_neo_regular"
        android:textColor="@color/gray_500"
        android:textSize="14sp"
        android:lineHeight="20dp" />

    <LinearLayout
        android:id="@+id/signup_all_agree_button"
        android:layout_width="328dp"
        android:layout_height="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="444dp"
        android:background="@drawable/signup_agree_all_button_background"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true">
        <ImageView
            android:id="@+id/signup_all_agree_checkbox"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/signup_agree_checkbox"
            android:layout_marginStart="12dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/signup_all_agree_text"
            android:fontFamily="@font/spoqa_han_sans_neo_regular"
            android:textColor="@color/gray_900"
            android:textSize="16sp"
            android:lineHeight="24dp" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/signup_service_agree_button"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        app:layout_constraintStart_toStartOf="@id/signup_all_agree_button"
        app:layout_constraintTop_toBottomOf="@id/signup_all_agree_button"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/signup_service_agree_checkbox"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/signup_agree_checkbox"
            android:layout_marginStart="12dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/signup_must_text"
            android:fontFamily="@font/spoqa_han_sans_neo_regular"
            android:textColor="@color/primary_500"
            android:textSize="14sp"
            android:lineHeight="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/signup_service_text"
            android:fontFamily="@font/spoqa_han_sans_neo_regular"
            android:textColor="@color/gray_900"
            android:textSize="14sp"
            android:lineHeight="20dp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signup_service_agree_right_arrow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/signup_service_agree_button"
        app:layout_constraintBottom_toBottomOf="@id/signup_service_agree_button"
        app:layout_constraintEnd_toEndOf="@id/signup_all_agree_button"
        app:layout_constraintTop_toTopOf="@id/signup_service_agree_button">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/chevron_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/gray_400" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/signup_personal_info_agree_button"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        app:layout_constraintStart_toStartOf="@id/signup_all_agree_button"
        app:layout_constraintTop_toBottomOf="@id/signup_service_agree_button"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/signup_personal_info_agree_checkbox"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/signup_agree_checkbox"
            android:layout_marginStart="12dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/signup_must_text"
            android:fontFamily="@font/spoqa_han_sans_neo_regular"
            android:textColor="@color/primary_500"
            android:textSize="14sp"
            android:lineHeight="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/signup_personal_info_text"
            android:fontFamily="@font/spoqa_han_sans_neo_regular"
            android:textColor="@color/gray_900"
            android:textSize="14sp"
            android:lineHeight="20dp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signup_personal_info_agree_right_arrow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/signup_personal_info_agree_button"
        app:layout_constraintBottom_toBottomOf="@id/signup_personal_info_agree_button"
        app:layout_constraintEnd_toEndOf="@id/signup_all_agree_button"
        app:layout_constraintTop_toTopOf="@id/signup_personal_info_agree_button">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/chevron_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/gray_400" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/signup_marketing_agree_button"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        app:layout_constraintStart_toStartOf="@id/signup_all_agree_button"
        app:layout_constraintTop_toBottomOf="@id/signup_personal_info_agree_button"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/signup_marketing_agree_checkbox"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/signup_agree_checkbox"
            android:layout_marginStart="12dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/signup_not_must_text"
            android:fontFamily="@font/spoqa_han_sans_neo_regular"
            android:textColor="@color/gray_500"
            android:textSize="14sp"
            android:lineHeight="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/signup_marketing_text"
            android:fontFamily="@font/spoqa_han_sans_neo_regular"
            android:textColor="@color/gray_900"
            android:textSize="14sp"
            android:lineHeight="20dp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signup_marketing_agree_right_arrow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/signup_marketing_agree_button"
        app:layout_constraintBottom_toBottomOf="@id/signup_marketing_agree_button"
        app:layout_constraintEnd_toEndOf="@id/signup_all_agree_button"
        app:layout_constraintTop_toTopOf="@id/signup_marketing_agree_button">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/chevron_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/gray_400" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/next_button"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/signup_bottom_button_selector"
        android:fontFamily="@font/spoqa_han_sans_neo_regular"
        android:lineHeight="24dp"
        android:text="회원가입"
        android:textColor="@color/signup_bottom_button_text_color_selector"
        android:textSize="14sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>